--- a/demo.html
+++ b/demo.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Micro Templating Demo</title>
 		
-		<link rel="stylesheet" type="text/css" href="Style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		  
 		<!-----------------  TEMPLATING SCRIPT  ------------------->
-		<script src="MicroTemplate.js"></script>
+		<script src="micro-template.js"></script>
 	
 		<!-----------------  EXTERNAL DATA FILE  ------------------- 
 		Can move records to external files. A file can contain multiple datasets. 
