--- a/Demo.html
+++ b/Demo.html
@@ -3,16 +3,16 @@
 	<head>
 		<title>Micro Templating Demo</title>
 		
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="Style.css">
 		  
 		<!-----------------  TEMPLATING SCRIPT  ------------------->
-		<script src="micro-template.js"></script>
+		<script src="MicroTemplate.js"></script>
 	
 		<!-----------------  EXTERNAL DATA FILE  ------------------- 
 		Can move records to external files. A file can contain multiple datasets. 
 		If move datasets to external file, uncomment the statement below, 
 		and change the extension of this .html file to .php
-		<?php echo file_get_contents("records.html"); ?>
+		<?php echo file_get_contents("Records.html"); ?>
 		-->
 	
 	</head>
