--- a/Demo.html
+++ b/Demo.html
@@ -9,10 +9,10 @@
 		<script src="MicroTemplate.js"></script>
 	
 		<!-----------------  EXTERNAL DATA FILE  ------------------- 
-		Can move records-j to external files. A file can contain multiple datasets. 
+		Can move records to external files. A file can contain multiple datasets. 
 		If move datasets to external file, uncomment the statement below, 
 		and change the extension of this .html file to .php
-		<?php echo file_get_contents("records.html"); ?>
+		<?php echo file_get_contents("Records.html"); ?>
 		-->
 	
 	</head>
