--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-	
+	testing
 	<head>
 		<title>Micro Templating Demo</title>
 		  
@@ -24,18 +24,18 @@
 		<H1>HTML Micro-Template Demonstration</H1>
 		
 		<!-------------- MERGE CONTAINERS ------------------->
-		<H3>HTML Layout = "artist", Data="Painters"</H3>
-		<span MT-template="artist" MT-records="EEs" class="artists"></span>
+		<H3>HTML Layout 1, Group 1</H3>
+		<div MT-template="artist" MT-records="EEs" class="artists"></div>
 
 		<hr>
 		
-		<H3>HTML Layout = "engineer", Data="Painters"</H3>
-		<span MT-template="engineer" MT-records="EEs" class="engineers"></span>
+		<H3>HTML Layout 2, Group 1</H3>
+		<div MT-template="engineer" MT-records="EEs" class="engineers"></div>
 
 		<hr>
 		
-		<H3>HTML Layout = "engineer", Data="Tattoo Artists"</H3>
-		<span MT-template="engineer" MT-records="MEs" class="engineers"></span>
+		<H3>HTML Layout 2, Group 2</H3>
+		<div MT-template="engineer" MT-records="MEs" class="engineers"></div>
 
 		<hr>
 	  	
