--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	
 	<!-------------- TEMPLATES ------------------>
-	<templates_>
+	<MT-templates_>
 
 		
 		<template id="engineer">
@@ -69,7 +69,7 @@
 		</template>
 
 		
-	</templates_>
+	</MT-templates_>
 		
 
 	<!-------------- RECORDSETS ------------------>
