--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Micro Templating with Groups</title>
+	<title>MT - Meta</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<script src="micro-template.js"></script>
 </head>
@@ -50,7 +50,7 @@
 		<span class="artist">
 			<a href="[[LINK]]" target="_blank">
 				<div>[[NAME]]</div>
-				<img width=400px src="https://bayviewboom.org/data/uploads/photos/people/artists/[[IMG]]" alt="">
+				<img src="https://bayviewboom.org/data/uploads/photos/people/artists/[[IMG]]" alt="">
 			</a>
 			<blockquote>[[DESCRIPTION]]</blockquote>
 			<br>
@@ -63,7 +63,7 @@
 		<span class="art-group">
 			<h1 class="group-title">[[NAME]]</h1>
 			<h2 class="group-subtitle">They [[VERB]]</h2>
-			<img src=[[IMG]] target=_blank width=800px>
+			<img src=[[IMG]] target=_blank>
 			<div class="group-description">[[INTRO]]</div>
 			<br>
 		</span>
