--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
 
 		<H1>HTML Micro-Template Demonstration</H1>
 		
-		<!-------------- MERGE CONTAINER ------------------->
+		<!-------------- CONTAINER: SIMPLE TEMPLATE+DATA MERGE  ------------------->
 		<H3>HTML Layout 1, Group 1</H3>
 		<span mt-template="artist" mt-records="EEs" class="artists"></span>
 		<hr>
 		
-		<!-------------- GROUP CONTAINER 1  ------------------->
+		<!-------------- CONTAINER: GROUP CONTAINER 1  ------------------->
 		<span mt-header="engineers" mt-meta="
-			TITLE:HTML Layout 2, Group 1
+			TITLE: HTML Layout 2, Group 1
 			SUBTITLE: Electrical Engineers
 			RECORDS: EEs
+			ITEM-CLASS: engineer
 			"></span>
 		<hr>
 
